plugins {
	id 'net.fabricmc.fabric-loom-remap' version '1.15-SNAPSHOT'
	id 'maven-publish'
}

version = "$mod_version+build.$build_number-$minecraft_version"
group = maven_group

repositories {
	mavenCentral()
	mavenLocal()
	maven { url = 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
	maven { url = 'https://server.bbkr.space/artifactory/libs-release/' }
	maven { url = 'https://repo.repsy.io/mvn/xxx_inaksis_xxx/inaksis' }
	maven { url = 'https://repo.codemc.org/repository/maven-public' }
	maven { url = 'https://maven.quiltmc.org/repository/release' }
	maven { url = 'https://maven.quiltmc.org/repository/snapshot' }
	maven { url = 'https://maven.minecraftforge.net/' }
	maven { url = 'https://maven.terraformersmc.com/' }
	maven { url = 'https://api.modrinth.com/maven' }
	maven { url = 'https://hephaestus.dev/release' }
	maven { url = 'https://maven.ryanliptak.com/' }
	maven { url = 'https://maven.wispforest.io' }
	maven { url = 'https://maven.shedaniel.me' }
	maven { url = 'https://mvn.devos.one/releases/' }
	maven { url = 'https://mvn.devos.one/snapshots/' }
	maven { url = 'https://jitpack.io' }
	maven { url = 'https://maven.isxander.dev/releases' }
	maven {
		url "https://maven.saps.dev/minecraft"
		content {
			includeGroup "dev.latvian.mods"
			includeGroup "dev.ftb.mods"
		}
	}
	maven { url = "https://maven.parchmentmc.net/" }
	maven {
		url "https://maven.firstdarkdev.xyz/snapshots"
	}
	maven {
		name = "sonatype-oss-snapshots1"
		url = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
		mavenContent { snapshotsOnly() }
	}
	maven { url 'https://maven.nucleoid.xyz' }
	maven {
		name = "Gegy"
		url = uri("https://maven.gegy.dev/releases/")
	}
	maven { url = 'https://maven.siphalor.de' }
}

loom {
	accessWidenerPath = file("src/main/resources/obsidian.accesswidener")
}

configurations.configureEach {
	resolutionStrategy {
		force("net.fabricmc.fabric-api:fabric-api:0.141.3+1.21.11")
		force("net.fabricmc:fabric-loader:0.18.4")
		force("com.terraformersmc:modmenu:17.0.0-alpha.1")
	}
}

dependencies {
	implementation 'org.jetbrains:annotations:24.0.0'
	def noFapi = { exclude group: 'net.fabricmc.fabric-api' }
	def noFLoader = { exclude group: 'net.fabricmc' }
	def noCottonMC = { exclude group: 'io.github.cottonmc' }
	def noQuiltMC = { exclude group: 'org.quiltmc' }

	minecraft libs.minecraft
	mappings loom.layered {
		it.officialMojangMappings()
	}

	modImplementation libs.fabric.loader

	modImplementation libs.fabric.api

	modRuntimeOnly("com.terraformersmc:modmenu:17.0.0-beta.2")

	modImplementation("com.terraformersmc:biolith-fabric:3.5.0-beta.3")

	modImplementation include("io.github.cottonmc:Jankson-Fabric:11.0.0+j1.2.3")

	modImplementation (libs.owo.lib) {
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}
	include (libs.owo.sentinel) {
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}

//	modImplementation ("io.wispforest:condensed_creative-fabric:${libs.versions.cct.get()}") {
//		noFapi
//		noFLoader
//		noCottonMC
//		noQuiltMC
//	}
//	modImplementation("io.wispforest:accessories-fabric:${libs.versions.accessories.get()}") {
//		noFapi
//		noFLoader
//		noCottonMC
//		noQuiltMC
//	}

	modImplementation "dev.isxander:yet-another-config-lib:3.8.2+1.21.11-fabric"

	implementation "com.electronwill.night-config:core:${libs.versions.nc.get()}"
	implementation "com.electronwill.night-config:toml:${libs.versions.nc.get()}"
	implementation "com.electronwill.night-config:yaml:${libs.versions.nc.get()}"
	implementation "com.electronwill.night-config:hocon:${libs.versions.nc.get()}"

	implementation 'org.hjson:hjson:3.0.1'
	implementation "com.fasterxml.jackson.core:jackson-databind:${libs.versions.jackson.get()}"
	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${libs.versions.jackson.get()}"
	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-toml:${libs.versions.jackson.get()}"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-guava:${libs.versions.jackson.get()}"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${libs.versions.jackson.get()}"

	modImplementation("net.vampirestudios:arrp:0.12.1+build.2")

	modImplementation "com.ptsmods:devlogin:3.3"

	include(modImplementation("eu.pb4:sgui:1.12.0+1.21.11"))
	modImplementation(include("eu.pb4:placeholder-api:2.8.2+1.21.10"))

	modImplementation("com.github.Chocohead:Fabric-ASM:v2.3") {
		exclude (group: "net.fabricmc.fabric-api")
	}
	include "com.github.Chocohead:Fabric-ASM:v2.3"
}

processResources {
	inputs.property 'version', version

	filesMatching('fabric.mod.json') {
		expand inputs.properties
	}
}

java {
	withSourcesJar()
	withJavadocJar()
	toolchain.languageVersion = JavaLanguageVersion.of(21)
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
	it.options.encoding = 'UTF-8'
}

compileJava {
	options.compilerArgs += '--enable-preview'
}

jar {
	from('LICENSE') {
		rename {
			"${it}_$archivesBaseName"
		}
	}
}

publishing {
	publications {
		mavenJava( MavenPublication ) {
			from components.java
		}
	}
	repositories {}
}
